--- a/index.html
+++ b/index.html
@@ -1,66 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <title>Echo Squad ADM</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Echo Squad ADM</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div id="loginTela">
-  <h1>🔐 Echo Squad - Painel ADM</h1>
-  <input type="text" id="login" placeholder="Login">
+<div class="login" id="loginTela">
+  <h1>🎮 Echo Squad</h1>
+  <p>Painel Administrativo</p>
+  <input type="text" id="login" placeholder="Login ADM">
   <input type="password" id="senha" placeholder="Senha">
   <button onclick="logar()">Entrar</button>
 </div>
 
-<div id="painel" style="display:none;">
-  <h1>⚙️ Painel Administrativo — Echo Squad</h1>
-  <p>ADM: Nicolas & Bernardo</p>
+<div class="painel" id="painel" style="display:none;">
+  <h2>⚙️ Painel ADM</h2>
+  <p>Nicolas & Bernardo</p>
 
-  <h2>🎯 Registrar Missão / Conquista</h2>
+  <div class="card">
+    <h3>🎯 Registrar Missão</h3>
 
-  <select id="jogador">
-    <option>Otto</option>
-    <option>Vinicius</option>
-    <option>Emanuel</option>
-    <option>Antheus</option>
-    <option>Otavio</option>
-    <option>Victor</option>
-    <option>Carlos</option>
-    <option>Sofia</option>
-  </select>
+    <select id="jogador">
+      <option>Otto</option>
+      <option>Vinicius</option>
+      <option>Emanuel</option>
+      <option>Antheus</option>
+      <option>Otavio</option>
+      <option>Victor</option>
+      <option>Carlos</option>
+      <option>Sofia</option>
+    </select>
 
-  <select id="missao">
-    <option value="5">Primeiro Sangue (+5)</option>
-    <option value="10">Assassino (+10)</option>
-    <option value="20">Ceifador (+20)</option>
-    <option value="30">Lenda do PvP (+30)</option>
-    <option value="5">Mineiro (+5)</option>
-    <option value="5">Construtor (+5)</option>
-    <option value="10">Explorador (+10)</option>
-    <option value="15">Conquistador (+15)</option>
-    <option value="20">Rei do Mapa (+20)</option>
-    <option value="20">Senhor da Guerra (+20)</option>
-    <option value="10">Campeão (+10)</option>
-    <option value="15">Imbatível (+15)</option>
-    <option value="25">Lenda dos Eventos (+25)</option>
-  </select>
+    <select id="missao">
+      <option value="5">Primeiro Sangue (+5)</option>
+      <option value="10">Assassino (+10)</option>
+      <option value="20">Ceifador (+20)</option>
+      <option value="30">Lenda do PvP (+30)</option>
+      <option value="5">Mineiro (+5)</option>
+      <option value="5">Construtor (+5)</option>
+      <option value="10">Explorador (+10)</option>
+      <option value="15">Conquistador (+15)</option>
+      <option value="20">Rei do Mapa (+20)</option>
+      <option value="20">Senhor da Guerra (+20)</option>
+      <option value="10">Campeão (+10)</option>
+      <option value="15">Imbatível (+15)</option>
+      <option value="25">Lenda dos Eventos (+25)</option>
+    </select>
 
-  <button onclick="registrar()">Registrar Missão</button>
+    <button onclick="registrar()">Registrar</button>
+  </div>
 
-  <h2>🏆 Ranking Atual</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Posição</th>
-        <th>Jogador</th>
-        <th>Pontos</th>
-      </tr>
-    </thead>
-    <tbody id="ranking"></tbody>
-  </table>
-
+  <div class="card">
+    <h3>🏆 Ranking</h3>
+    <div id="ranking"></div>
+    <button onclick="baixarRanking()">📥 Baixar Ranking</button>
+  </div>
 </div>
 
 <script src="script.js"></script>
